# cs2-gsi-webui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
assets/: index.html
src/: main.rs
